# FDA_AntiVib_enhance

./: .gitignore  README.md  design-qa.md  main.py  pyproject.toml
app/: __init__.py  runtime_paths.py  update_checker.py
app/core/: adaptive_window.py  fda_baseline.py  kernel.py  phase_gap.py  pixel_analysis.py  reference.py  result_model.py  scan_steps.py  software_scan_steps.py  surface_analysis.py
app/gui/: __init__.py  fringe_profile_window.py  main_window.py  mpl_font.py  pixel_window.py  surface_analysis_page.py  theme.py  widgets.py  worker.py
app/pipeline/: __init__.py  active_range.py  io.py  scan_log.py  session.py
app/plotting/: paper.py  preview.py
docs/superpowers/plans/: 2026-06-09-guided-analysis-console-implementation.md  2026-06-13-surface-analysis.md
docs/superpowers/specs/: 2026-06-09-guided-analysis-console-design.md  2026-06-13-surface-analysis-design.md
packaging/: data_analysis.iss  data_analysis.spec
scripts/: build_windows_exe.ps1  diagnose_step_matlab_alignment.m  generate_app_icon.py  upload_release_installer.ps1
tests/: test_adaptive_window.py  test_gui_layout.py  test_pipeline_io.py  test_plot_labels.py  test_preview_lifecycle.py  test_scan_steps.py  test_surface_analysis.py  test_surface_analysis_page.py  test_update_checker.py
